integrated and tested jdk 17 vector api